--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.4",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
@@ -19,8 +19,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5",
-        "xethron/migrations-generator": "^2.0"
+        "phpunit/phpunit": "^7.5"
     },
     "config": {
         "optimize-autoloader": true,
