--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -1,19 +1,22 @@
-version: '3.7'
+version: '3.8'
 services:
   web:
     build:
-      context: ./
+      context: .
       dockerfile: ./docker/web/Dockerfile
     ports:
       - '80:80'
     volumes:
-      - ./:/var/www/html
+      - .:/code
+      - ./docker/web/files/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - db
   db:
     image: mysql:5.7
     ports:
       - '3306:3306'
+    volumes:
+      - ./docker/db/data:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
       - MYSQL_DATABASE=${DB_DATABASE}
